2006-06-09 Enrico Sersale (enrico at fibernet dot ro)

	* version 0.9.
	* PDFKit is now based on the xpdf-3.01 sources.
  
2004-11-06 18:52  stefankst

	* xpdf/xpdf-3.00/xpdf/XRef.cc: applied xpdf patch to fix various
	  buffer overflows

2004-10-11 19:29  stefankst

	* Documentation/ChangeLog: updated for v0.8

2004-10-11 19:26  stefankst

	* xpdf/xpdf-3.00/GNUmakefile: use $(MAKE) instead of gmake

2004-10-11 19:25  stefankst

	* Documentation/INSTALL: added notes about gnu make

2004-10-11 19:24  stefankst

	* GNUmakefile: set framework version

2004-10-07 23:43  stefankst

	* config.make: improved freetype detection (thanks to Rob Burns)

2004-10-07 23:23  stefankst

	* Documentation/Contributors.txt: cvs import

2004-10-05 18:38  stefankst

	* GNUmakefile: added PDFPrintView.m,.h

2004-10-05 18:36  stefankst

	* PDFPrintView.h, PDFPrintView.m: cvs import

2004-10-05 18:35  stefankst

	* PDFDocument.h, PDFDocument.m, PDFOutline.h, PDFOutline.m: wrap
	  the xpdf document with a counting reference

2004-10-05 18:33  stefankst

	* xpdf/bridge/: CountingRef.h, CountingRef.m, DPS.h, DPS.m,
	  PSOutputDev.cc, PSOutputDev.h: cvs import

2004-10-05 18:20  stefankst

	* xpdf/bridge/: XPDFBridge.cc, XPDFBridge.h: first, rudimental
	  support for printing

2004-10-05 18:19  stefankst

	* xpdf/bridge/GNUmakefile: added DPS.m, CountingRef.m,
	  PSOutputDev.c

2004-08-21 14:35  stefankst

	* PDFDocument.h, PDFDocument.m, xpdf/bridge/XPDFBridge.cc,
	  xpdf/bridge/XPDFBridge.h: Improved searching in pdf documents. A
	  search context object is used to hold some data between to
	  subsequent searches in a document.  This increases speed a bit.

2004-06-28 22:24  stefankst

	* config.make: removed erroneous -L switch from LIB_FREETYPE_LIBS
	  in linux configuration

2004-03-31 23:39  stefankst

	* GNUmakefile, PDFDocument.h, PDFDocument.m, PDFFontManager.h,
	  PDFFontManager.m, PDFImageRep.h, PDFImageRep.m, PDFOutline.h,
	  PDFOutline.m, config.make, Documentation/COPYING,